force-app/main/default/objects/Vehicle/fields/Current_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Current_Mileage__c</fullName>
    <label>Current Mileage</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>