force-app/main/default/objects/Vehicle/fields/Data_Cloud_Person_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Cloud_Person_Id__c</fullName>
    <description>Unified Individual ID from Data Cloud — links this vehicle to its customer profile for 360-degree insights.</description>
    <label>Data Cloud Person ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>