force-app/main/default/objects/Vehicle/fields/Last_Known_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Last_Known_Mileage__c</fullName>
    <description>Most recent odometer reading — used by Agentforce to validate mileage-based warranty eligibility.</description>
    <label>Last Known Mileage (km)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>