force-app/main/default/objects/Vehicle/fields/Telematics_Id__c.field-meta.xml
<CustomField>
    <fullName>Telematics_Id__c</fullName>
    <description>ID from the connected vehicle telematics platform. Used for Data Cloud integration.</description>
    <externalId>true</externalId>
    <label>Telematics ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>